--- a/afiche.html
+++ b/afiche.html
@@ -47,7 +47,7 @@
 <body>
     <div id="img1">
         <A href="https://maps.app.goo.gl/BBCdVzbNEmYUpVrS7">
-        <img src="C:img/uvi.png" alt="uvi" width="150" height="150" style="border-radius:10px; margin-top: 600px;" >
+        <img src="https://cdn-icons-png.flaticon.com/512/3721/3721984.png" alt="uvi" width="150" height="150" style="border-radius:10px; margin-top: 600px;" >
     </A>
     </div>
     
